fix(components/LinkCard): don't balance description text on mobile'

--- a/src/components/LinkCard.module.scss
+++ b/src/components/LinkCard.module.scss
@@ -29,14 +29,6 @@
   & p {
     margin: 0;
   }
-
-  @media (max-width: queries.$mw-mobile) {
-    padding: var(--gap-medium);
-
-    & p {
-      text-wrap: balance;
-    }
-  }
 }
 
 .Hint {
